--- a/webui/package.json
+++ b/webui/package.json
@@ -8,12 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.8",
     "vue": "^3.2.25",
     "vue-router": "^4.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9"
   }
 }
