--- a/webui/package.json
+++ b/webui/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "clipboard": "^2.0.8",
     "driver.js": "^0.9.8",
+    "echarts": "^5.3.3",
     "element-plus": "^1.3.0-beta.5",
     "generate-avatar": "^1.4.10",
     "lodash": "^4.17.21",
