--- a/webui/package.json
+++ b/webui/package.json
@@ -23,6 +23,7 @@
     "lscache": "^1.3.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.15",
     "qrcode": "^1.5.0",
     "qs": "^6.10.3",
     "vue": "^3.2.25",
@@ -35,6 +36,7 @@
     "eslint": "^8.7.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.3.0",
+    "mockjs": "^1.1.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.0",
     "vite": "^2.7.2"
