feat(ignore):忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ venv
 *.iml
 *.xml
 webapi/utils/__pycache__/dependencies.cpython-37.pyc
+webapi/routers/__pycache__/__init__.cpython-39.pyc
+webapi/routers/__pycache__/hr_router.cpython-39.pyc
