--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,36 @@
-aiomysql==0.1.1
-colorama==0.4.5
-elasticsearch7==7.17.4
-fastapi==0.78.0
-jose==1.0.0
-passlib==1.7.4
-pydantic==1.9.1
-pytest==7.1.2
-python-dotenv==0.20.0
-python_jose==3.3.0
-SQLAlchemy==1.4.37
-starlette==0.19.1
-uvicorn==0.17.6
+pyjwt==2.1.0
+mysql-connector-python~=8.0.26
+requests~=2.23.0
+sqlalchemy==1.4.11
+jsonschema
+fastapi~=0.75.0
+uvicorn[standard]~=0.17.6
+pydantic~=1.8.1
+PyYAML~=5.3.1
+starlette~=0.17.1
+aiohttp~=3.8.1
+aiomysql
+Jinja2~=3.0.3
+aiofiles
+psycopg2-binary
+APScheduler~=3.8.0
+redis~=3.5.3
+redis-py-cluster
+redlock~=1.2.0
+yagmail
+oss2~=2.15.0
+python-multipart
+awaits~=0.0.1
+aioify~=0.4.1
+grpc-requests
+loguru~=0.6.0
+qiniu~=7.6.0
+cos-python-sdk-v5
+asyncpg
+pymysql
+mitmproxy~=8.0.0
+jsonpath~=0.82
+py-mock
+starlette_context
+gunicorn
+supervisor
