🕷update(update requirements):更新依赖文件

--- a/webapi/requirements.txt
+++ b/webapi/requirements.txt
@@ -1,48 +1,37 @@
-aiofiles==0.8.0
-aiohttp==3.8.1
-aiomysql==0.0.21
-aiosignal==1.2.0
-asgiref==3.4.1
-async-timeout==4.0.2
-attrs==21.2.0
-bcrypt==3.2.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==8.0.1
-colorama==0.4.4
-cryptography==3.4.7
-dnspython==2.1.0
-ecdsa==0.17.0
-elasticsearch7==7.17.0
-email-validator==1.1.3
-fastapi==0.67.0
-frozenlist==1.3.0
-greenlet==1.1.0
-h11==0.12.0
-idna==3.2
-iniconfig==1.1.1
-multidict==6.0.2
-packaging==21.0
-passlib==1.7.4
-pluggy==0.13.1
-py==1.10.0
-pyasn1==0.4.8
-pycparser==2.20
-pydantic==1.8.2
-PyMySQL==0.9.3
-pyparsing==2.4.7
-pytest==6.2.4
-python-dotenv==0.20.0
-python-jose==3.3.0
-python-multipart==0.0.5
-requests==2.26.0
-rsa==4.7.2
-six==1.16.0
-SQLAlchemy==1.4.31
-starlette==0.14.2
-toml==0.10.2
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-uvicorn==0.14.0
-yarl==1.7.2
+pyjwt==2.1.0
+mysql-connector-python~=8.0.26
+requests~=2.23.0
+sqlalchemy==1.4.11
+jsonschema
+fastapi~=0.75.0
+uvicorn[standard]~=0.17.6
+pydantic~=1.8.1
+PyYAML~=5.3.1
+starlette~=0.17.1
+aiohttp~=3.8.1
+aiomysql
+Jinja2~=3.0.3
+aiofiles
+psycopg2-binary
+APScheduler~=3.8.0
+redis~=3.5.3
+redis-py-cluster
+redlock~=1.2.0
+yagmail
+oss2~=2.15.0
+python-multipart
+awaits~=0.0.1
+aioify~=0.4.1
+grpc-requests
+loguru~=0.6.0
+qiniu~=7.6.0
+cos-python-sdk-v5
+asyncpg
+pymysql
+mitmproxy~=8.0.0
+jsonpath~=0.82
+py-mock
+starlette_context
+gunicorn
+supervisor
+pyDes~=2.0.1
