🎆perf(Optimized code):优化代码

--- a/webapi/conf/pro.env
+++ b/webapi/conf/pro.env
@@ -1,9 +1,9 @@
 # MySQL config
 MYSQL_HOST="120.79.24.202"
 MYSQL_PORT=3306
-MYSQL_USER="sakura_admin1"
-MYSQL_PWD="YmEMSsdhacRKpphZ"
-DBNAME="sakura_admin1"
+MYSQL_USER="Sakura_Admin"
+MYSQL_PWD="Sakura_Admin"
+DBNAME="sakura_admin"
 
 # Redis config
 REDIS_ON=True
