🌋feat(Added the Redis server address of the test environment):新增测试环境redis服务器地址

--- a/webapi/conf/dev.env
+++ b/webapi/conf/dev.env
@@ -7,10 +7,10 @@ DBNAME="sakura_admin"
 
 # Redis config
 REDIS_ON=True
-REDIS_HOST="127.0.0.1"
+REDIS_HOST="120.79.24.202"
 REDIS_PORT=6379
 REDIS_DB=0
-REDIS_PASSWORD=""
+REDIS_PASSWORD="123456"
 
 # Github token
 CLIENT_ID="c46c7ae33442d13498cd"
