🐞Fix:(Fixed Bug ):修复一些小bug

--- a/webui/.env.development
+++ b/webui/.env.development
@@ -3,4 +3,4 @@ VITE_APP_TITLE = 'Sakura_Admin_Dev'
 #版本
 VITE_APP_VERSION = '0.0.1'
 #接口地址
-VITE_API_URL = 'http://127.0.0.1:8001'
+VITE_API_URL = 'http://localhost:7777/docs'
